# Irony

./: README.md  ROADMAP.md  build.zig  build.zig.zon  build_all.bat  build_info_t7.zig  build_info_t8.zig
.agents_tmp/: PLAN.md
.github/workflows/: release.yml
dep/file_patchers/: find_replace.zig  function.zig
src/: dll.zig  tests.zig
src/dll/: event_buss.zig  root.zig
src/dll/api/: client.zig  root.zig
src/dll/core/: automation.zig  coach.zig  coach_report.zig  controller.zig  core.zig  match_stats.zig  referee.zig  root.zig
src/dll/game/: capturer.zig  conversions.zig  hooks.zig  memory.zig  root.zig  types.zig
src/dll/ipc/: bridge.zig  root.zig
src/dll/model/: floor_gimmicks.zig  frame.zig  hit_lines.zig  misc.zig  player.zig  recording.zig  root.zig  settings.zig  walls.zig
src/dll/rendering/: lines.hlsl  lines.zig  rendering.zig  root.zig  shapes.zig
src/dll/ui/: about_window.zig  camera.zig  collision_spheres.zig  controls.zig  data.zig  details.zig  file_menu.zig  forward_directions.zig  hit_lines.zig  hurt_cylinders.zig  ingame_camera.zig  main_window.zig  match_bar.zig  root.zig  (+8 more)
synaptyx_intelligence/: __init__.py  admin.py  main.py  pyproject.toml  service.py  tray.py
synaptyx_intelligence/api/: __init__.py  platform_client.py
synaptyx_intelligence/coach/: __init__.py  analyzer.py  report.py
synaptyx_intelligence/config/: __init__.py  settings.py
synaptyx_intelligence/ipc/: __init__.py  client.py  protocol.py
synaptyx_intelligence/models/: __init__.py
synaptyx_intelligence/referee/: __init__.py  engine.py  violations.py
(+41 files in other folders)
